--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<app-root>
-</app-root>
+  <app-home></app-home>
+  <app-test></app-test>
+  <app-todo></app-todo>
+  <app-todo-edit></app-todo-edit>
+  <app-todo-list></app-todo-list>
