half way on add create movie add to collection then edit the material

--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -1,19 +1,10 @@
 
   <div class="navbar-default navbar bg-info text-white">
     <div class="navbar-brand">Movie Together</div>
-    <div *ngIf="!user" id="unloggedIn" class="btn-group">
-      <a href="/login" class="btn btn-primary">Login</a>
-      <a href="/register" class="btn btn-secondary">Register</a>
-    </div>
-    <div id="loggedIn" *ngIf="user && user.userType==='1'">
-      <a href="/profile" class="btn btn-primary">Profile</a>
-      <a (click)="logout()" class="btn btn-danger">Log Out</a>
-    </div>
-    <div id="adminLoggedIn" *ngIf="user && user.userType==='0'">
-      <a href="/administrator" class="btn btn-primary">Profile</a>
-      <a (click)="logout()" class="btn btn-danger">Log Out</a>
-    </div>
+    <app-navbar></app-navbar>
   </div>
+
+
 
   <div class=" container justify-content-center vertical-center">
     <input class="search" placeholder="search movie" [(ngModel)]="title" style="width:60%; border: 0.15cm solid cornflowerblue">
