--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -1,5 +1,5 @@
 <div class="navbar navbar-default bg-info text-white">
-  <a routerLink=""><i class="fa fa-arrow-left"></i></a>
+  <a routerLink=""><i class="fa fa-arrow-left fa-2x" style="color: white"></i></a>
   <label>Profile</label>
 </div>
 <div class="container" *ngIf="user">
