--- a/src/styles.css
+++ b/src/styles.css
@@ -7,3 +7,10 @@
   display: flex;
   align-items: center;
 }
+
+.movie_item {
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-items: center;
+}
