--- a/src/app/components/movie/movie-detail/movie-detail.component.html
+++ b/src/app/components/movie/movie-detail/movie-detail.component.html
@@ -1,8 +1,20 @@
-<div *ngIf="keys">
-  <img [src]="movieDetail.Poster" class="img-fluid">
-  <table class="table-striped table-light table-hover">
-    <tr *ngFor="let key of keys">
-      {{key}} : {{movieDetail[key]}}
-    </tr>
-  </table>
+<div class="navbar-default navbar bg-info text-white">
+  <a class="fa fa-arrow-left fa-2x" style="color: white;" routerLink="/searchResults/{{title}}"></a>
+  <app-navbar></app-navbar>
 </div>
+
+<div *ngIf="keys" class="container-fluid row">
+  <div class="col-lg-3 movie_item">
+    <img [src]="movieDetail.Poster" class="img-fluid">
+  </div>
+  <div class="col-lg-9 movie_item">
+    <table class="table-striped table-light table-hover">
+      <tr *ngFor="let key of keys">
+        {{key}} : {{movieDetail[key]}}
+      </tr>
+    </table>
+  </div>
+</div>
+
+<app-control-bar></app-control-bar>
+
