--- a/src/app/components/user/admin/user-detail/user-detail.component.html
+++ b/src/app/components/user/admin/user-detail/user-detail.component.html
@@ -1,3 +1,7 @@
 <p>
   user-detail works!
 </p>
+
+build up user detail page
+generate material  review friends in profile page
+add functionality for admin page delete edit create
