--- a/src/app/components/movie/movie-detail/movie-detail.component.html
+++ b/src/app/components/movie/movie-detail/movie-detail.component.html
@@ -1,7 +1,4 @@
-<div class="navbar-default navbar bg-info text-white">
-  <a class="fa fa-arrow-left fa-2x" style="color: white;" routerLink="/searchResults/{{title}}"></a>
-  <app-navbar></app-navbar>
-</div>
+<app-navbar></app-navbar>
 
 <div *ngIf="keys" class="container-fluid row">
   <div class="col-lg-3 movie_item">
@@ -18,13 +15,7 @@
 
 <app-control-bar *ngIf="movieReady"></app-control-bar>
 
-<div class="container-fluid alert alert-danger" *ngIf="errFlag">
-  {{errMsg}}
-</div>
 
-<div class="container-fluid alert alert-success" *ngIf="sucFlag">
-  {{sucMsg}}
-</div>
 
 <div class="card">
   <div class="card-header" role="tab" id="heading1">
@@ -44,7 +35,7 @@
             <span class="col-lg-2">Video: {{m.video}}</span>
             <span class="col-lg-2">Audio: {{m.audio}}</span>
             <span class="col-lg-2">Text: {{m.text}}</span>
-            <button class="btn btn-outline-primary" (click)="addAsFriend()">Add Poster As Friend</button>
+            <button class="btn btn-outline-primary" routerLink="/userPage/{{m.userId}}">Poster</button>
           </div>
         </tr>
       </table>
@@ -68,7 +59,7 @@
           <div class="container-fluid">
             <span class="col-lg-4">Title: {{m.title.trim()}}</span>
             <span class="col-lg-4">Content: {{m.content}}</span>
-            <button class="btn btn-outline-primary" (click)="addAsFriend()">Add Poster As Friend</button>
+            <button class="btn btn-outline-primary" routerLink="/userPage/{{m.userId}}">Poster</button>
           </div>
         </tr>
       </table>
