--- a/src/app/components/user/navbar/navbar.component.html
+++ b/src/app/components/user/navbar/navbar.component.html
@@ -9,11 +9,11 @@
     <a href="/login" class="btn btn-primary">Login</a>
     <a href="/register" class="btn btn-secondary">Register</a>
   </div>
-  <div id="loggedIn" *ngIf="user && user.userType==='1'">
+  <div id="loggedIn" *ngIf="user && user.userType == 1">
     <a href="/profile" class="btn btn-primary">Profile</a>
     <a (click)="logout()" class="btn btn-danger">Log Out</a>
   </div>
-  <div id="adminLoggedIn" *ngIf="user && user.userType==='0'">
+  <div id="adminLoggedIn" *ngIf="user && user.userType == 0">
     <a href="/administrator" class="btn btn-primary">Profile</a>
     <a (click)="logout()" class="btn btn-danger">Log Out</a>
   </div>
