--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -12,34 +12,34 @@
     Update Succeed!
   </div>
   <form (ngSubmit) = "update()" #f="ngForm">
-    <div class="form-group">
-      <label for="username">Username</label>
+    <div class="input-group row">
+      <label class="col-lg-3" for="username">Username</label>
       <input [(ngModel)]="user.username" name="username" type="text" class="form-control" id="username" placeholder="walice">
     </div>
 
-    <div class="form-group">
-      <label for="email">Email address</label>
+    <div class="input-group row">
+      <label class="col-lg-3" for="email">Email address</label>
       <input type="email" class="form-control" id="email" placeholder="email address" name="email" [(ngModel)]="user.email">
     </div>
 
 
-    <div class="form-group">
-      <label for="first-name">First Name</label>
+    <div class="input-group row">
+      <label class="col-lg-3" for="first-name">First Name</label>
       <input [(ngModel)]="user.firstName" name="firstName" type="text" class="form-control" id="first-name" placeholder="Alice">
     </div>
 
-    <div class="form-group">
-      <label for="last-name">Last Name</label>
+    <div class="input-group row">
+      <label class="col-lg-3" for="last-name">Last Name</label>
       <input [(ngModel)]="user.lastName" name="lastName" type="text" class="form-control" id="last-name" placeholder="Wonderland">
     </div>
 
-    <div class="form-group">
-      <label for="phone">Phone</label>
+    <div class="input-group row">
+      <label class="col-lg-3" for="phone">Phone</label>
       <input [(ngModel)]="user.phone" id="phone" name="phone" type="text" class="form-control" placeholder="123-345-5678">
     </div>
 
-    <div class="form-group">
-      <label for="date">First Name</label>
+    <div class="input-group row">
+      <label class="col-lg-3" for="date">First Name</label>
       <input disabled [ngModel]="user.dateCreated | date: 'MM/dd/yyyy HH:mm:ss'" name="date" type="text" class="form-control" id="date">
     </div>
 
@@ -49,9 +49,82 @@
             type="submit"
             [disabled]="!f.valid">Update</button>
     <p> </p>
-    <a class="btn btn-primary btn-block"
-       routerLink='/user/{{user?._id}}/website'>Collections</a>
   </form>
   <p></p>
   <button class="btn btn-danger btn-block" (click)="logout()">Logout</button>
+</div>
+
+
+<div class="card">
+  <div class="card-header" role="tab" id="heading11">
+    <h5 class="mb-0">
+      <a class="collapsed" data-toggle="collapse" href="#collapse11" aria-expanded="false" aria-controls="collapse11">
+        Collection List
+      </a>
+    </h5>
+  </div>
+  <div id="collapse11" class="collapse" role="tabpanel" aria-labelledby="heading11">
+      <div *ngFor="let m of collection" class="container-fluid justify-content-between row">
+        <h4 class="card-title">{{m.name}}</h4>
+        <a href="/collection/{{m._id}}" class="card-link">Collection link</a>
+        <button class="btn btn-outline-danger" (click)="deleteCollection(m)">Delete Collection</button>
+      </div>
+    </div>
+</div>
+
+<div class="card">
+  <div class="card-header" role="tab" id="heading1">
+    <h5 class="mb-0">
+      <a class="collapsed" data-toggle="collapse" href="#collapse1" aria-expanded="false" aria-controls="collapse1">
+        Material List
+      </a>
+    </h5>
+  </div>
+  <div id="collapse1" class="collapse" role="tabpanel" aria-labelledby="heading1">
+          <div class="container-fluid justify-content-between" *ngFor="let m of materialList">
+            <h4>Title: {{m.title}}</h4>
+            <h6>Content: {{m.content}}</h6>
+            <h6>Video: {{m.video}}</h6>
+            <h6>Audio: {{m.audio}}</h6>
+            <h6>Text: {{m.text}}</h6>
+            <button class="btn btn-outline-danger btn-block" (click)="deleteMaterial(m._id)">Delete Material</button>
+            <hr/>
+          </div>
+    </div>
+</div>
+
+
+<div class="card">
+  <div class="card-header" role="tab" id="heading2">
+    <h5 class="mb-0">
+      <a class="collapsed" data-toggle="collapse" href="#collapse2" aria-expanded="false" aria-controls="collapse2">
+        Review List
+      </a>
+    </h5>
+  </div>
+  <div id="collapse2" class="collapse" role="tabpanel" aria-labelledby="heading2">
+          <div class="container-fluid justify-content-between"  *ngFor="let m of reviewList">
+            <h4 >Title: {{m.title}}</h4>
+            <a >Content: {{m.content}}</a>
+            <button class="btn btn-outline-danger btn-block" (click)="deleteReview(m._id)">Delete Review</button>
+            <hr/>
+          </div>
+    </div>
+</div>
+
+<div class="card">
+  <div class="card-header" role="tab" id="heading4">
+    <h5 class="mb-0">
+      <a class="collapsed" data-toggle="collapse" href="#collapse4" aria-expanded="false" aria-controls="collapse4">
+        Friend List
+      </a>
+    </h5>
+  </div>
+  <div id="collapse4" class="collapse" role="tabpanel" aria-labelledby="heading4">
+          <div class="container-fluid justify-content-between row"  *ngFor="let m of friendList">
+            <span routerLink="/userPage/{{m._id}}">Title: {{m.username}}</span>
+            <span>Content: {{m.dateCreated | date: 'mm:dd:yy'}}</span>
+            <button class="btn btn-outline-danger" (click)="deleteFriend(m._id)">Delete Friend</button>
+          </div>
+    </div>
 </div>
