--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -2,10 +2,12 @@
 
 
 
-  <div class=" container justify-content-center vertical-center">
-    <input class="search" placeholder="search movie" [(ngModel)]="title" style="width:60%; border: 0.15cm solid cornflowerblue">
-    <a routerLink='/searchResults/{{title}}' class="btn btn-primary fa fa-search fa-lg"></a>
+  <div class=" container justify-content-center vertical-center input-group">
+    <input class="form-control search" placeholder="search movie" [(ngModel)]="title" >
+    <a routerLink='/searchResults/{{title}}' class="btn btn-outline-primary"><i class=" fa fa-search fa-lg"></i> </a>
   </div>
+
+
   <div class="container justify-content-center align-item-center">
     <img style="width:100%; height: 400px" src="../../../assets/img/logo.jpg">
   </div>
